--- a/app/config/easy_admin.yml
+++ b/app/config/easy_admin.yml
@@ -3,6 +3,7 @@ easy_admin:
     entities:
         Park:
             class: BddBundle\Entity\Park
+            disabled_actions: ['delete']
             list:
                 fields: ['id', 'name', 'coasters']
             edit:
@@ -12,7 +13,7 @@ easy_admin:
         OpeningCoasters:
             class: BddBundle\Entity\Coaster
             label: 'Opening of coasters'
-            disabled_actions: ['new']
+            disabled_actions: ['new', 'delete', 'show']
             list:
                 fields:
                     - name
@@ -26,8 +27,21 @@ easy_admin:
                     - name
                     - {property: 'status', type_options: {choice_translation_domain: 'database'}}
                     - openingDate
+        Images:
+            class: BddBundle\Entity\Image
+            label: 'Images'
+            disabled_actions: ['new', 'edit', 'show']
+            list:
+                fields:
+                    - id
+                    - coaster
+                    - { property: 'path', type: 'image', base_path: '/images/coasters/' }
+                sort: ['updatedAt', 'DESC']
+            search:
+                fields: ['coaster.name']
         Country:
             class: BddBundle\Entity\Country
+            disabled_actions: ['delete']
             list:
                 fields:
                     - name
@@ -39,6 +53,7 @@ easy_admin:
                 fields: ['name', 'slug']
         Launch:
             class: BddBundle\Entity\Launch
+            disabled_actions: ['delete']
             list:
                 fields: ['id', 'name']
             edit:
@@ -47,6 +62,7 @@ easy_admin:
                 fields: ['name', 'slug']
         Manufacturer:
             class: BddBundle\Entity\Manufacturer
+            disabled_actions: ['delete']
             list:
                 fields: ['id', 'name', 'builtCoasters']
             edit:
