--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,6 +33,9 @@ services:
     BddBundle\Service\ImageManager:
         arguments:
             $basePath: '%base_path_images%'
+            $watermarkPath: '%watermark_path%'
+            $jpegoptimPath: '%jpegoptim_path%'
+            $imagine: '@liip_imagine.imagick'
 
     BddBundle\Service\BannerMaker:
         arguments:
@@ -58,8 +61,9 @@ services:
 
     BddBundle\Doctrine\ImageListener:
         tags:
-            - { name: doctrine.event_listener, event: prePersist }
-            - { name: doctrine.event_listener, event: preRemove }
+            - { name: doctrine.event_listener, event: prePersist, lazy: true }
+            - { name: doctrine.event_listener, event: preRemove, lazy: true }
+            - { name: doctrine.event_listener, event: postRemove, lazy: true }
 
     BddBundle\Service\DiscordMonologHandler:
         arguments:
