--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -32,6 +32,7 @@ parameters:
     base_upload_path: '%kernel.project_dir%/web/upload'
     watermark_path: '%kernel.project_dir%/web/images/watermark-cc.png'
     jpegoptim_path: '/usr/local/bin/jpegoptim'
+    liip_imagine.jpegoptim.binary: '%jpegoptim_path%'
 
     # Banner
     banner_font_path: '%kernel.project_dir%/web/fonts/OpenSans-Regular.ttf'
