--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -61,9 +61,10 @@ services:
 
     BddBundle\Doctrine\ImageListener:
         tags:
-            - { name: doctrine.event_listener, event: prePersist, lazy: true }
-            - { name: doctrine.event_listener, event: preRemove, lazy: true }
-            - { name: doctrine.event_listener, event: postRemove, lazy: true }
+            - {name: doctrine.event_listener, event: prePersist, lazy: true}
+            - {name: doctrine.event_listener, event: postUpdate, lazy: true}
+            - {name: doctrine.event_listener, event: preRemove, lazy: true}
+            - {name: doctrine.event_listener, event: postRemove, lazy: true}
 
     BddBundle\Service\DiscordMonologHandler:
         arguments:
