init coasters nearby page

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,10 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            numeric_functions:
+                cos: DoctrineExtensions\Query\Mysql\Cos
+                power: DoctrineExtensions\Query\Mysql\Power
 
 # Swiftmailer Configuration
 swiftmailer:
