ranking history + discord service refact

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -43,4 +43,4 @@ monolog:
             handler: custom_discord
         custom_discord:
             type: 'service'
-            id: 'BddBundle\Service\DiscordMonologHandler'
+            id: 'BddBundle\Handler\DiscordMonologHandler'
