--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -53,11 +53,9 @@ services:
         arguments:
             $locales: '%app.locales.array%'
 
-    BddBundle\Service\DiscordMonologHandler:
+    BddBundle\Service\DiscordService:
         arguments:
-            $client: '@httplug.client.avatar'
-            $factory: '@httplug.message_factory'
-            $url: '%discord_url%'
+            $channels: '%discord_channels%'
         public: true
 
     BddBundle\Doctrine\ImageListener:
@@ -65,6 +63,12 @@ services:
         - {name: doctrine.event_listener, event: prePersist, lazy: true}
         - {name: doctrine.event_listener, event: postUpdate, lazy: true}
         - {name: doctrine.event_listener, event: preRemove, lazy: true}
+        - {name: doctrine.event_listener, event: postRemove, lazy: true}
+
+    BddBundle\Doctrine\CoasterListener:
+        tags:
+        - {name: doctrine.event_listener, event: postPersist, lazy: true}
+        - {name: doctrine.event_listener, event: postUpdate, lazy: true}
         - {name: doctrine.event_listener, event: postRemove, lazy: true}
 
     my.custom.user_provider:
