--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": ">=7.1",
         "ext-json": "*",
+        "api-platform/core": "^2.1",
         "beberlei/DoctrineExtensions": "^1.1",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
