update icons + sw + seatingType

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -6,14 +6,14 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "apple-touch-icon-144x144.png",
-      "type": "image/png",
-      "sizes": "144x144"
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "apple-touch-icon-152x152.png",
-      "type": "image/png",
-      "sizes": "152x152"
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "/?utm_source=pwa"
