--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "easycorp/easyadmin-bundle": "^1.17",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "friendsofsymfony/user-bundle": "~2.0",
+        "google/recaptcha": "^1.2",
         "hwi/oauth-bundle": "^0.6.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.6",
