fix host parameter

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -79,7 +79,7 @@ services:
 
     BddBundle\Validator\Constraints\ReCaptchaValidator:
         arguments:
-            $hostname: '%router.request_context.base_url%'
+            $hostname: '%context_host%'
             $secret: '%recaptcha_secret%'
 
     my.custom.user_provider:
