--- a/composer.json
+++ b/composer.json
@@ -20,38 +20,34 @@
         ]
     },
     "require": {
-        "php": ">=7.1",
+        "php": "^7.1.3",
         "ext-json": "*",
         "api-platform/core": "^2.1",
         "beberlei/DoctrineExtensions": "^1.1",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "easycorp/easyadmin-bundle": "^1.17",
-        "friendsofsymfony/jsrouting-bundle": "^1.6",
+        "friendsofsymfony/jsrouting-bundle": "^2.1",
         "friendsofsymfony/user-bundle": "~2.0",
         "google/recaptcha": "^1.2",
         "hwi/oauth-bundle": "^0.6.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.6",
         "knplabs/knp-time-bundle": "^1.7",
-        "liip/imagine-bundle": "^1.8",
+        "liip/imagine-bundle": "^2.0",
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/httplug-bundle": "^1.10",
         "ramsey/uuid": "^3.7",
-        "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.4.*",
-        "twig/extensions": "^1.5",
-        "twig/twig": "^1.0||^2.0"
+        "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/symfony": "^4.1",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2",
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "phpunit/phpunit": "^7.0"
     },
     "scripts": {
         "symfony-scripts": [
